crates/tools/cron/src/tests/unit/snapshots/cron__tests__unit__week__multiple__all__range.snap
---
source: crates/tools/cron/src/tests/unit/week.rs
expression: result
---
Ok(
    (
        "",
        MonthRule {
            kinds: [
                MonthKind {
                    range: (
                        January,
                        December,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
                MonthKind {
                    range: (
                        January,
                        March,
                    ),
                    periodic: MonthPeriodic(
                        1,
                    ),
                },
            ],
        },
    ),
)
